# Embedded-Monitoring-System-Critical-Applications

./: .cproject  .project  README.md  sdkconfig  sdkconfig.old  sonar-project.properties
components/CardioIDLogging/: CMakeLists.txt  cidlogging.c  sntp.c  ssh.c  utils.c
components/CardioIDLogging/cyclone/common/: error.h  str.c  str.h
components/CardioIDLogging/cyclone/cyclone_crypto/aead/: ccm.h  chacha20_poly1305.h  gcm.c  gcm.h
components/CardioIDLogging/cyclone/cyclone_crypto/cipher/: aes.c  aes.h  aria.h  blowfish.c  blowfish.h  camellia.c  camellia.h  cast128.h  cast256.h  chacha.c  chacha.h  des.c  des.h  des3.c  des3.h  idea.c  idea.h  mars.h  present.h  rc2.h  rc4.c  rc4.h  rc6.h  seed.c  seed.h  serpent.h  tea.h  trivium.h  twofish.h  xtea.h
components/CardioIDLogging/cyclone/cyclone_crypto/cipher_modes/: cbc.c  cbc.h  cfb.h  ctr.c  ctr.h  ecb.h  ofb.h  xts.h
components/CardioIDLogging/cyclone/cyclone_crypto/core/: crypto.h
components/CardioIDLogging/cyclone/cyclone_crypto/ecc/: ec.c  ec.h  ec_curves.c  ec_curves.h  ecdh.c  ecdh.h  ecdsa.c  ecdsa.h  ed25519.c  ed25519.h  ed448.c  ed448.h  eddsa.c  eddsa.h  x25519.c  x25519.h  x448.c  x448.h
components/CardioIDLogging/cyclone/cyclone_crypto/encoding/: asn1.c  asn1.h  base64.c  base64.h  base64url.h  oid.c  oid.h  radix64.h
components/CardioIDLogging/cyclone/cyclone_crypto/hash/: blake2b.h  blake2b160.h  blake2b256.h  blake2b384.h  blake2b512.h  blake2s.h  md2.h  (+27 more)
components/CardioIDLogging/include/: cidlogging.h  crypto_config.h  net_config.h  os_port_config.h  sntp.h  ssh.h  ssh_config.h  utils.h
(+297 files in other folders)
